# gaa

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.in  configure.scan
.github/workflows/: codeql.yml  flawfinder.yml  gaa.yml
config/: .gitattributes
doc/: .gitignore  Makefile  Makefile.am  Makefile.in  gaa.dvi  gaa.html  gaa.info  gaa.ps  gaa.tex  gaa.texi  ref.tex  tut.tex  version.texi
doc/gaa/: WARNINGS  images.pl  images.tex  index.html  node1.html  node10.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node17.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html
doc/gaa.html/: index.html
doc/ref/: WARNINGS  images.pl  images.tex  index.html  node1.html  node2.html  node3.html  node4.html  node5.html  node6.html
doc/tut/: index.html  node1.html  node10.html  node11.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html  node9.html
m4/: acinclude.m4
sample/: Makefile  Makefile.am  Makefile.in  config  sample.gaa  sample2.gaa  sample3.gaa  sample4.gaa  smain.c  smain2.c
source/: Makefile  Makefile.am  Makefile.in  gaa.c  gaa.gaa  gaa.h  gaa_lex.c  gaa_lex.l  gaa_parser.c  gaa_parser.h  gaa_parser.y  gaaout.c  gaaout.h
source/skel/: Makefile  Makefile.am  Makefile.in  gaa.skel
